--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -27,7 +27,7 @@ header: header-match
               </div>
             </div>
             <div class="py-5 text-white bg-transparent">
-              <div class="row row-cols-3 g-2">
+              <div class="row row-cols-3 g-1">
                 {% for player in page.lineup %}
                 <span class="col-2 fs-5 fw-bolder text-uppercase text-end text-secondary pe-2">{{ player.no-punggung }}</span>
                 <span class="col-2 fs-6 text-uppercase text-center badge border border-secondary text-secondary">{{ player.position }}</span>
@@ -59,7 +59,7 @@ header: header-match
 <div class="text-white bg-dark py-5">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-3">Statistics</h1>
-    <div class="d-flex align-items-center pb-3" style="max-width: 30em;">
+    <div class="d-flex align-items-center mx-auto pb-3" style="max-width: 30em;">
       <div class="w-50 d-flex justify-content-end pe-1">
         <span class="text-uppercase fw-bolder pe-1">{{ page.home.name }}</span>
         <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
@@ -69,7 +69,7 @@ header: header-match
         <span class="text-uppercase fw-bolder ps-1">{{ page.away.name }}</span>
       </div>
     </div>
-    <table class="table table-dark" style="max-width: 30em;">
+    <table class="table table-dark mx-auto" style="max-width: 30em;">
       <tbody>
         <tr>
           <td class="fw-bolder">{{ page.stat.home.shots }}</td>
