--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -56,10 +56,10 @@ header: header-match
 {% endif %}
 
 {% if page.stat %}
-<div class="text-white bg-dark py-5">
+<div class="text-white bg-dark py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
-    <div class="d-flex align-items-center mx-auto pb-3" style="max-width: 30em;">
+    <div class="d-flex align-items-center mx-auto pb-3" style="max-width: 40em;">
       <div class="w-50 d-flex justify-content-end pe-1">
         <span class="text-uppercase fw-bolder pe-1">{{ page.home.name }}</span>
         <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
@@ -69,7 +69,7 @@ header: header-match
         <span class="text-uppercase fw-bolder ps-1">{{ page.away.name }}</span>
       </div>
     </div>
-    <table class="table table-dark mx-auto" style="max-width: 30em;">
+    <table class="table table-dark mx-auto" style="max-width: 40em;">
       <tbody>
         <tr>
           <td class="fw-bolder">{{ page.stat.home.shots }}</td>
