--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -4,7 +4,7 @@ header: header-match
 ---
 
 {% if page.lineup %}
-<div class="text-white bg-dark" style="background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url('{{ page.lineup-image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<div class="text-white bg-transparent" style="background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)), url('{{ page.lineup-image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
   <div class="h-100">
     <div class="container-sm bg-transparent py-5">
       <div class="row row-cols-1">
@@ -56,7 +56,7 @@ header: header-match
 {% endif %}
 
 {% if page.stat %}
-<div class="text-white bg-transparent py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6));">
+<div class="text-white bg-transparent py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7));">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
     <div class="d-flex align-items-center mx-auto pb-3" style="max-width: 40em;">
