--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -10,7 +10,7 @@ header: header-match
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent border-0">
-            <div class="card-header d-flex justify-content-between border-0 px-0">
+            <div class="card-header bg-transparent d-flex justify-content-between border-0 px-0">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div class="d-flex justify-content-center align-items-start">
                 <div class="d-block text-end">
