--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -18,10 +18,10 @@
     <div class="container-sm pb-3">
       <div class="row row-cols-1 row-cols-md-2 g-2">
         <div class="col">
-          <img src="{% if page.image %}{{ page.image }}{% else %}{{ '/assets/img/pp/blank-pp.svg' | relative_url }}{% endif %}" alt="" class="img-fluid rounded-0">
+          <img src="{% if page.image %}{{ page.image }}{% else %}{{ '/assets/img/pp/blank-pp.svg' | relative_url }}{% endif %}" alt="" class="img-fluid rounded-0" width="auto" height="300">
         </div>
         <div class="col d-flex flex-column justify-content-center text-white text-center text-md-start">
-          <p class="fw-bolder text-uppercase lh-1 mb-3" style="font-size: 4em;">{{ page.no-punggung }}</p>
+          <p class="fw-bolder text-uppercase lh-1 mb-5" style="font-size: 4em;">{{ page.no-punggung }}</p>
           <p><span class="d-inline badge bg-light text-dark text-uppercase fs-5">{{ page.position }}</span></p>
           <p class="fw-bolder text-uppercase lh-1" style="font-size: 3em;">{{ page.title }}</p>
         </div>
