--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,13 @@
 layout: default
 ---
 
-<article>
-  <header>
-    <h1>{{ page.title }}</h1>
-    <time datetime="{{ page.date | date_to_xmlschema }}"><small>{{ page.date | date_to_long_string }}</small></time>
+<article class="bg-light py-5">
+  <header class="container-sm">
+    <h1 class="text-capitalize mb-0">{{ page.title }}</h1>
+    <h3 class="text-capitalize text-secondary">{{ page.description }}</h3>
+    <time datetime="{{ page.date | date_to_xmlschema }}"><small class="text-secondary mt-3">{{ page.date | date_to_long_string }}</small></time>
   </header>
-  {{ content }}
+  <div class="container-sm" style="max-width: 38em;">
+    {{ content }}
+  </div>
 </article>
