--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,11 @@
 layout: default
 ---
 
-<div>
-  {{ content }}
+<div class="bg-light py-5">
+  <header class="container-sm pb-5">
+    <h1>{{ page.title }}</h1>
+  </header>
+  <div class="container-sm">
+    {{ content }}
+  </div>
 </div>
