--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
-<footer class="bg-light">
-  <div class="container py-2">
+<footer class="bg-light py-5">
+  <h6 class="text-uppercase text-center fw-bolder mb-0">partners</h6>
+  <div class="container-sm">
     <div class="d-flex justify-content-evenly align-items-center">
       <div>
         <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0" width="100" height="100">
