--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="bg-light py-5">
   <h6 class="text-uppercase text-center fw-bolder mb-0">partners</h6>
   <div class="container-sm">
-    <div class="d-flex justify-content-evenly align-items-center">
+    <div class="d-flex justify-content-evenly align-items-center border-bottom">
       <div>
         <img src="{{ '/assets/img/POK.svg' | relative_url }}" alt="" class="border-0" width="100" height="100">
         <img src="{{ '/assets/img/yeni-sembako.svg' | relative_url }}" alt="" class="border-0 px-3" width="100" height="100">
