--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -5,18 +5,38 @@ header: header-player
 
 {% if page.details %}
 <div class="text-white bg-dark py-5">
-  <div class="container-sm">
-    <h1 class="text-uppercase mb-0 fs-3 pb-3">details</h1>
-    <table class="table table-dark">
-      <tbody>
-        {% for item in page.details %}
-        <tr>
-          <td class="text-uppercase fw-bolder ps-0">{{ item.name }}</td>
-          <td class="text-capitalize">{{ item.value }}</td>
-        </tr>
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-2 g-3">
+      <div class="col">
+        <h1 class="text-uppercase mb-0 fs-3">details</h1>
+        <table class="table table-dark">
+          <tbody>
+            {% for item in page.details %}
+            <tr>
+              <td class="text-uppercase fw-bolder ps-0">{{ item.name }}</td>
+              <td class="text-capitalize">{{ item.value }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+    {% assign player = site.data.players_2022 %}
+    {% assign player-id = page.id %}
+    {% if player.stats and player.id == page.id %}
+    <div>
+      <div class="row row-cols-2 row-cols-md-3 g-3">
+        {% for stat in player.stats %}
+        <div class="col card rounded-0">
+          <div class="card-body">
+            <p class="fs-4 text-uppercase text-center mb-0">{{ stat.name }}</p>
+            <p class="fs-1 text-uppercase text-center fw-bolder mb-0">{{ stat.value }}</p>
+          </div>
+        </div>
         {% endfor %}
-      </tbody>
-    </table>
+      </div>
+    </div>
+    {% endif %}
   </div>
 </div>
 {% endif %}
