--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -21,7 +21,7 @@ header: header-player
       </div>
     </div>
     {% if page.stats %}
-    <div>
+    <div class="text-white bg-dark">
       <div class="row row-cols-2 row-cols-md-3 g-3">
         {% for stat in page.stats %}
         <div class="col card rounded-0">
